src/test/ui/issues/issue-20939.rs
trait Foo {}

impl<'a> Foo for Foo+'a {}
//~^ ERROR the object type `(dyn Foo + 'a)` automatically implements the trait `Foo`

fn main() {}
